<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="168dp"
            android:layout_height="168dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/vk_white"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/city_track"
            android:textAlignment="center"
            android:textColor="@color/vk_white"
            android:textSize="32sp" />


        <Button
            android:id="@+id/enter_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="102dp"
            android:background="@color/grey_424242_70"
            android:elevation="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/vk_white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@color/grey_424242_70"
            android:elevation="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/vk_white"
            android:textSize="18sp" />


    </LinearLayout>

</FrameLayout>