<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="42dp"
        android:clipToPadding="false"
        app:cardBackgroundColor="@color/grey_424242_70"
        app:cardCornerRadius="4dp"
        app:elevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registration_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Введите email"
                        android:textColor="@color/vk_white"
                        android:textSize="14sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/registration_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/email"
                        android:textAlignment="center"
                        android:inputType="textEmailAddress"
                        app:met_baseColor="@color/vk_white"
                        app:met_floatingLabel="none"
                        app:met_textColor="@color/vk_white"
                        app:met_textColorHint="@color/vk_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Введите пароль"
                        android:textColor="@color/vk_white"
                        android:textSize="14sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/registration_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/reg_password"
                        android:inputType="textPassword"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        app:met_baseColor="@color/vk_white"
                        app:met_floatingLabel="none"
                        app:met_textColor="@color/vk_white"
                        app:met_textColorHint="@color/vk_white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_continue_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/login_screen_button"
                        android:elevation="8dp"
                        android:text="@string/reg_continue"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/tv_registration_agreement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/reg_social_networks"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />


                    <Button
                        android:id="@+id/btn_registration_vk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/login_screen_button"
                        android:elevation="8dp"
                        android:text="@string/sign_in_with_vk"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebook_registration_fake_btn"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/facebook_registration_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/login_screen_button"
                        android:elevation="8dp"
                        android:text="@string/sign_in_with_fb"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>