<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="62dp"
        android:clipToPadding="false"
        app:cardBackgroundColor="@color/grey_424242_70"
        app:cardCornerRadius="4dp"
        app:elevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Введите имя"
                        android:textColor="@color/vk_white"
                        android:textSize="14sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/registration_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="2dp"
                        android:hint="@string/name"
                        android:textAlignment="center"
                        app:met_baseColor="@color/vk_white"
                        app:met_floatingLabel="none"
                        app:met_textColor="@color/vk_white"
                        app:met_textColorHint="@color/vk_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Введите фамилию"
                        android:textColor="@color/vk_white"
                        android:textSize="14sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/registration_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="2dp"
                        android:hint="@string/surname"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        app:met_baseColor="@color/vk_white"
                        app:met_floatingLabel="none"
                        app:met_textColor="@color/vk_white"
                        app:met_textColorHint="@color/vk_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Выберите дату рождения"
                        android:textColor="@color/vk_white"
                        android:textSize="14sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/registration_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="2dp"
                        android:hint="@string/birth_date"
                        android:textAlignment="center"
                        app:met_baseColor="@color/vk_white"
                        app:met_floatingLabel="none"
                        app:met_textColor="@color/vk_white"
                        app:met_textColorHint="@color/vk_white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/login_screen_button"
                        android:elevation="8dp"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>