<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:id="@+id/login_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="158dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="92dp"
        android:clipToPadding="false"
        app:cardBackgroundColor="@color/grey_424242_70"
        app:cardCornerRadius="4dp"
        app:elevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/password_restore"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Введите email"
                        android:textColor="@color/vk_white"
                        android:textSize="14sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/forgot_password_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textAlignment="center"
                        app:met_baseColor="@color/vk_white"
                        app:met_floatingLabel="none"
                        app:met_textColor="@color/vk_white"
                        app:met_textColorHint="@color/vk_white" />


                    <Button
                        android:id="@+id/btn_send_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/login_screen_button"
                        android:elevation="8dp"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>